test/should_not_compile/syntax_typbind.sml
type t = int
     and t = string;
